syntax = "proto3";

package kaboomproto;

import "kaboomproto/board.proto";
import "kaboomproto/piece.proto";
import "kaboomproto/player.proto";
import "kaboomproto/turn.proto";

message GameSnapshot {
  string uuid          = 1;
  string rules_variant = 2;

  repeated Board      boards  = 20;
  repeated Player     players = 30;
  repeated ChessPiece pieces  = 40;

  repeated Turn turns = 50;
}
